<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <EditText
                    android:inputType="number"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <EditText
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <Button
                android:layout_margin="20dp"
                android:text="@string/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:text="@string/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>