<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.allen.library.CircleImageView
                android:id="@+id/login_head_icon"
                android:src="@drawable/p01"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:gravity="start|center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/login_et_username"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:gravity="start|center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/login_et_password"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/login_cb"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/remeber_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/login_btn"
                android:background="@drawable/button_bg"
                android:layout_margin="20dp"
                android:text="@string/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/login_tv_register"
                android:gravity="center"
                android:textColor="@color/blue"
                android:text="@string/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>