<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_round_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">
        <TextView
            android:gravity="center_vertical|start"
            android:textColor="#4169E1"
            android:text="隐私协议"
            android:textSize="16sp"
            android:layout_weight="2"
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="注册账号"
            android:layout_weight="1"
            android:id="@+id/tv_titlte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center_vertical|end"
            android:textColor="#4169E1"
            android:text="确认注册"
            android:textSize="16sp"
            android:layout_weight="2"
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:gravity="start|center_vertical"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <EditText
                android:maxLines="1"
                android:id="@+id/register_et_username"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:gravity="start|center_vertical"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <EditText
                android:maxLines="1"
                android:id="@+id/register_et_password"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:gravity="start|center_vertical"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <EditText
                android:maxLines="1"
                android:id="@+id/register_et_confirm_password"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>